--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -13,11 +14,11 @@
     </header>
     <main>
       <section class="card" id="html-section">
-          <h2>HTML</h2>
+          <h2>HTML - Hyper Text Markup Language</h2>
           <ul>
-            <li>Enter your HTML notes here:</li>
             <li>The head element contains information about the webpage.</li>
             <li>The body element represents the visible content shown to the user.</li>
+            <li>The title element is what will be displayed in the window or tab of the browser for that particular page</li>
             <li>h1 - h6 indicate headers that announce topics</li>
             <li>ul is unordered list</li>
             <li>li is a list item</li>
@@ -27,16 +28,21 @@
       </section>
    
       <section class="card" id="css-section">
-        <h2>CSS</h2>
+        <h2>CSS - Cascading Style Sheets</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside of an element.</li>
+          <li>a . indicates a class selector.</li>
+          <li>colors can be indicated by either semantic type (ray) or by hexadecimal (#888888)</li>
+          <li>sizes can be relative (%) or fixed (px)</li>
         </ul>
       </section>
    
       <section class="card" id="git-section">
-        <h2>Git</h2>
+        <h2>Git - Global Information Tracker or the stupid content tracker</h2>
         <ul>
-          <li>Enter your Git notes here</li>
+          <li>git status checks what branch we are currently on</li>
+          <li> git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
       </section>
    
