--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -42,7 +43,7 @@
         <h2>Git - Global Information Tracker or the stupid content tracker</h2>
         <ul>
           <li>git status checks what branch we are currently on</li>
-          <li> git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
       </section>
    
@@ -57,5 +58,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
