Added functions to script.js

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Arrays can hold many variables varying data types.</li>
+          <li>Arrays in JavaScript are 0-indexed, meaning they start at [0], then [1], [2], etc.</li>
+          
         </ul>
       </section>
     </main>
