--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <section class="card" id="html-section">
           <h2>HTML - Hyper Text Markup Language</h2>
           <ul>
+            <li>HTML is the language of a web broswer. It describes what information a webpage contains and how it should be displayed.</li>
             <li>The head element contains information about the webpage.</li>
             <li>The body element represents the visible content shown to the user.</li>
             <li>The title element is what will be displayed in the window or tab of the browser for that particular page</li>
@@ -25,36 +26,49 @@
             <li>li is a list item</li>
             <li>img is used to reference a source to show an image</li>
             <li>alt shows alternative text that can be shown with an element</li>
+            <li><a href="https://coding-boot-camp.github.io/full-stack/html/html-cheatsheet">HTML cheatsheet</a></li>
           </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS - Cascading Style Sheets</h2>
         <ul>
-          <li>A margin indicates how much space we want around the outside of an element.</li>
-          <li>A padding indicates how much space we want around the content inside of an element.</li>
-          <li>a . indicates a class selector.</li>
-          <li>colors can be indicated by either semantic type (ray) or by hexadecimal (#888888)</li>
+          <li>CSS is used to control the style and layout of a webpage. Colors, spacing, fonts and other cosmetic elements can be defined by a style sheet</li>
+          <li>Style sheets can be internal or external. Internal is contained directly within an HTML file and external is within a seperate .css file</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content inside of an element</li>
+          <li>a . indicates a class selector</li>
+          <li>colors can be indicated in different ways semantic type (gray) or by hexadecimal (#888888)</li>
           <li>sizes can be relative (%) or fixed (px)</li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS reference at Mozilla.org</a></li>
         </ul>
       </section>
    
       <section class="card" id="git-section">
-        <h2>Git - Global Information Tracker or the stupid content tracker</h2>
+        <h2>Git</h2>
         <ul>
-          <li>git status checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Git is a way to control the version of software. It allows multiple collaborators to change a repository independently while keeping it up to date.</li>
+          <li><b>touch</b> creates a file ex. touch index.html</li>
+          <li><b>git status</b> checks what branch we are currently on</li>
+          <li><b>git checkout -b branch-name</b> creates a new branch and switches to it</li>
+          <li><b>git add -A</b> stages all files in the current and higher directories that belong to that specific repository</li>
+          <li><b>commit -m "message goes here"</b> commits the changes in the branch and adds a message describing the changes</li>
+          <li><b>git push -u origin branch-name</b> pushes the changes in the branch to the repository</li>
+          <li><a href="https://education.github.com/git-cheat-sheet-education.pdf">Useful cheatset for Git</a></li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
+          <li>JavaScript is a programming language mostly used on webpages.</li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
           <li>Arrays can hold many variables varying data types.</li>
           <li>Arrays in JavaScript are 0-indexed, meaning they start at [0], then [1], [2], etc.</li>
-          
+          <li>Function are objects that can be called on to perform specific tasks</li>
+          <li>for is a statement that operates on a sequence of values (arrays for example)</li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/JavaScript_basics">JavaScript basics at Mozilla.org</a></li>
         </ul>
       </section>
     </main>
